Base Trips management

--- a/BaseExampleAngularCore/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/BaseExampleAngularCore/ClientApp/app/components/navmenu/navmenu.component.html
@@ -22,6 +22,11 @@
                         <span class='glyphicon glyphicon-th-list'></span> Trips
                     </a>
                 </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/addtrips']">
+                        <span class='glyphicon glyphicon-th-list'></span> AddTrips
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
