--- a/BaseExampleAngularCore/ClientApp/app/components/addtrips/addtrips.component.css
+++ b/BaseExampleAngularCore/ClientApp/app/components/addtrips/addtrips.component.css
@@ -3,17 +3,65 @@
     box-shadow: 0 13px 10px -8px gray;
 }
 
-.formBox:first-child{
-    margin-top: 10px;
-}
+    .formBox:first-child {
+        margin-top: 10px;
+    }
 
 
-.formLeft{
-    float:left;
+.formLeft {
+    float: left;
 }
 
 .alert {
     margin: 0px;
     padding: 2px;
-    padding-left:5px;
+    padding-left: 5px;
+}
+
+.polaroid-images > div {
+    background: white;
+    display: inline;
+    float: left;
+    margin: 0 15px 30px;
+    padding: 10px 10px 25px;
+    text-align: center;
+    text-decoration: none;
+    -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, .3);
+    -moz-box-shadow: 0 4px 6px rgba(0,0,0,.3);
+    box-shadow: 0 4px 6px rgba(0,0,0,.3);
+    -webkit-transition: all .15s linear;
+    -moz-transition: all .15s linear;
+    transition: all .15s linear;
+    z-index: 0;
+    position: relative;
+}
+
+input[type="file"] {
+    display: none;
+}
+
+.custom-file-upload {
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+}
+
+.polaroid-images > div >label {
+    cursor: pointer;
+}
+
+.polaroid-images > div:after {
+    color: #333;
+    font-size: 20px;
+    content: attr(title);
+    position: relative;
+    top: 15px;
+}
+
+.polaroid-images img {
+    display: block;
+    width: inherit;
+    min-height: 200px;
+    min-width: 300px;
 }
